# steel-iq

./: .gitignore  .pre-commit-config.yaml  AGENT4_SUMMARY.md  GASPLAN_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  justfile  logging_config.yaml  pyproject.toml
.github/scripts/: generate_readme.py
.github/workflows/: public-docs.yml  standalone_app.yaml
config/: README.md  optimization_example.yaml  optimization_performance.yaml
docs/: IMPLEMENTATION_COMPLETE.md  README.md  conf.py  focused_optimization_plan.md  gpu_acceleration_analysis.md  index.md  planet_network_solver_analysis.md  public_index.md
docs/_templates/: page.html
docs/architecture/: overview_architecture.md
docs/dashboard/: concept.md  custom_repositories.md  design_approaches.md  django_electron_overview.md  overview_dashboard.md  parallel_workers.md  user_stories.md
docs/data_management/: adding_excel_data_howto.md  cli_commands.md  data_packages.md  django_data_management.md  overview_data_management.md  python_api.md
docs/development/: create_modelrun_native_validation.md  electron_app.md  just_commands.md  overview_development.md  style_guide_and_variable_naming.md  technical_debt.md
docs/domain_simulation_logic/: checkpoint.md  environment.md  overview_simulation.md
docs/legacy_docs/: CHANGELOG.md  Handover-Handout.md  Handover-Slides.md  assumptions.md  backward_compatibility.md  data_sources  django_simulation_field_mapping.md  master-input-migration-plan.md  quota_validation_error.md
docs/user_guide/: LOGGING_GUIDE.md  cli_commands.md  commandline_entrypoints.md  configuration.md  installation_guide.md  overview_user_guide.md  running_simulations_locally.md
examples/: optimization_config_demo.py  run_simulation_example.py
scripts/: README.md  setup_and_test.py
specs/: 2025-11-14_biomass_fixing.md
src/baseload_optimisation_atlas/: __init__.py  boa_config.py  boa_constants.py  boa_cost_calculations.py  boa_geospatial_utils.py  boa_global_extension.py  boa_input_preprocessing.py  boa_logic.py  boa_plotting.py  boa_run_simulation.py
src/django/: .gitignore  demo_data_preparation.py
src/electron/: .gitignore  build-django.js  copy-icons.js  electron-builder.json  generate-icons.js  index.html  main.js  package-lock.json  package.json  preload.cjs  windows_job_wrapper.py
src/network_optimisation/: __init__.py  hitchcockproblem.py
src/steelo/: bootstrap.py  config.py  devdata.py  furnace_breakdown_logging_minimal.py  logging_config.py  simulation.py  simulation_types.py  validation.py
src/steeloweb/: admin.py  apps.py  asgi.py  forms.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py  views_worker.py  worker_supervisor.py  wsgi.py
src/wind_and_pv/: __init__.py  availability.py  chunking.py  distributed.py  processing.py
tests/: conftest.py  test_modelrun_scenarios.py  test_override_schemas.py  test_scenario_urls.py  test_scenario_urls_simple.py
tests/architecture/: test_no_global_imports.py
tests/baseload_power/: test_baseload_power_simulation.py  test_cost_of_renewables.py
tests/data/: test_data_path_resolver.py  test_recreation_config.py
tests/e2e/: conftest.py  test_cli.py  test_cli_caching.py  test_cli_simulation_config.py  test_transport_emissions_recreation.py
tests/entrypoints/: test_data_cli.py
tests/integration/: conftest.py  test_baseload_power_paths.py  test_biomass_availability_integration.py  test_bom_fallback.py.skip  test_bom_fallback_fixed.py.skip  test_carbon_cost_integration.py  test_checkpoint_handlers.py  test_data_preparation_caching.py  test_data_preparation_flow.py  test_datacollection_service.py  test_expansion_with_capex_subsidies.py  test_full_simulation.py  test_full_simulation_runtime.py  test_furnace_strategy_allowed_techs.py  test_master_excel_plant_creation.py  test_operational_plant_energy_subsidies.py  test_output_path_propagation.py  test_plant_json_historical_production.py  test_plant_lifetime_reconstruction.py  test_plant_metadata_capture.py  test_profit_updating_and_furnace_expansion.py  test_recreate_from_package.py  test_simulation_plotting_workflow.py  test_simulation_service.py  test_tech_switches_recreation.py  test_time_step_integration_and_furnace_activation.py  test_transport_emissions_integration.py
tests/unit/: test_allocation_model.py  test_allowed_transitions_not_year_filtered.py  test_biomass_availability_excel_reader.py  test_biomass_availability_json_repository.py  test_biomass_availability_recreation.py  test_bom_reading_regression.py  test_bom_secondary_feedstock.py  test_bom_technology_mapping.py.skip  (+105 more)
(+278 files in other folders)
